fixed subtitle spilling out of box, added cd info box

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body, html {
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  max-height: 100px;
 
   /*
   Align the title at the top center of the screen
@@ -65,15 +64,10 @@ panel with info
   opacity: 0.8;
   box-shadow: 0 2px 8px  rgba(0, 0, 0, 0.224);
 
-  
-
-
   max-width: 300px;
   border-radius: 12px;
   padding: 16px;
-  
 
-  
 }
 
 .tooltip {
@@ -134,4 +128,23 @@ legend code stolen from class 3 demo
 .legend-label {
     font-size: 13px;
     color: #555;
+}
+
+.cd_box {
+  display: inline-block;
+  flex-direction: column;
+  justify-content: left;
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  z-index: 4;
+
+  background-color: white;
+  color: black;
+  opacity: 0.8;
+  box-shadow: 0 2px 8px  rgba(0, 0, 0, 0.224);
+
+  max-width: 300px;
+  border-radius: 12px;
+  padding: 16px;
 }
